chore: reconcile root files (take new repo's docs/config, keep legacy's workspace)
Take from new repo (pure-rust focused, replaces legacy Scala-flavored versions):
- .gitignore (cleaner, drops .bloop/.bsp/.metals)
- CLAUDE.md (pure-rust + stigmergic conventions)
- CONTRIBUTING.md (rust workflow; legacy linked to defunct Travis/Atlassian)
- README.md (rust-tailored quick start)
- coding_guidelines.md (real content vs legacy's template placeholder)
- rust-toolchain.toml (adds components=[rustfmt,clippy], profile=minimal)

Keep legacy (already on branch):
- Cargo.toml (metrics 0.23 -> 0.24 bump)
- Justfile (superset: adds shard-down + 7 VPS recipes)
- CHANGELOG.md (v0.4.13-0.4.15 entries)

Cross.toml, cliff.toml, LICENSE.TXT, .cargo/ are identical -- no action.
Cargo.lock deferred to post-polish regeneration.

Co-Authored-By: Claude <noreply@anthropic.com>