@@ -1,518 +1,193 @@
-# F1r3fly
+# F1R3node Rust
 
-> A decentralized, economic, censorship-resistant, public compute infrastructure and blockchain that hosts and executes smart contracts with trustworthy, scalable, concurrent proof-of-stake consensus.
+Pure Rust implementation of the F1R3FLY blockchain node.
 
-## Table of Contents
+This repository tracks the Rust node implementation that lives on `rust/dev` in the upstream `f1r3node` repository and documents it as a standalone Cargo workspace. Local development uses standard Rust tooling and native system packages only.
 
-- [What is F1r3fly?](#what-is-f1r3fly)
-- [Security Notice](#note-on-the-use-of-this-software)
-- [Installation](#installation)
-  - [Docker (Recommended)](#docker-recommended)
-  - [Source (Development)](#source-development)
-- [Building](#building)
-  - [Docker Image](#building-rust-node-docker-image)
-  - [Cargo](#building-from-source)
-- [Running](#running)
-  - [Docker Network](#docker-network-recommended)
-  - [Local Development](#local-development)
-- [Usage](#usage)
-  - [F1r3fly Rust Client](#f1r3fly-rust-client)
-  - [Smoke Test](#smoke-test)
-  - [F1r3flyFS](#f1r3flyfs)
-- [Configuration](#configuration-file)
-- [Documentation](#documentation)
-- [Troubleshooting](#troubleshooting)
-- [Support & Community](#support--community)
-- [Known Issues & Reporting](#caveats-and-filing-issues)
-- [Legacy Scala/Hybrid Node](#legacy-scalahybrid-node)
-- [License](#licence-information)
+## Overview
 
-## What is F1r3fly?
+F1R3node Rust provides:
 
-F1r3fly is an open-source blockchain platform that provides:
+- Concurrent smart contract execution with Rholang and RSpace
+- Proof-of-stake consensus and finalization via the `casper` crate
+- gRPC and HTTP APIs for deploys, proposals, status, and data queries
+- Docker and local standalone workflows for development and testing
 
-- **Decentralized compute infrastructure** - Censorship-resistant public blockchain
-- **Smart contract execution** - Hosts and executes programs (smart contracts)
-- **Scalable consensus** - Proof-of-stake consensus with content delivery
-- **Concurrent processing** - Trustworthy and scalable concurrent execution
+## Workspace Crates
 
-### Getting Started
+| Crate | Purpose |
+| --- | --- |
+| `node` | Main binary, CLI, API servers, REPL, diagnostics |
+| `casper` | Consensus engine, block processing, genesis, finalization |
+| `rholang` | Interpreter and CLI for Rholang contracts |
+| `rspace++` | Tuple space storage and state management |
+| `models` | Protobuf models, generated gRPC types, schema helpers |
+| `crypto` | Keys, signatures, hashes, TLS certificate helpers |
+| `comm` | P2P networking, peer discovery, TLS transport |
+| `block-storage` | Block, deploy, DAG, and finality persistence |
+| `shared` | Common storage traits, event helpers, metrics utilities |
+| `graphz` | Graph and DOT generation helpers |
+| `rspace_plus_plus_rhotypes` | RSpace/Rholang type bridge helper crate |
 
-- **Production/Testing**: Use [Docker](#docker-recommended) to run nodes
-- **Development**: Install build tools [manually](#manual-install) or via [Nix](#nix-alternative)
-- **Community**: Join the [F1r3fly Discord](https://discord.gg/NN59aFdAHM)
-- **Testnet**: Public testnet access coming soon
+## Quick Start
 
-### Node Implementations
+### Prerequisites
 
-This repository contains two node implementations on different branches:
-
-| Implementation | Branch | Status | Description |
-|---|---|---|---|
-| **Rust Node** | `rust/dev` (default) | **Production (recommended)** | Pure Rust, no JVM dependency |
-| Scala Node | [`main`](https://github.com/F1R3FLY-io/f1r3fly/tree/main) | Maintenance | Original implementation, see [legacy section](#legacy-scalahybrid-node) |
-
-> You are on the **`rust/dev` branch** (Rust node).
-
-## Note on the use of this software
-A security review of this code is underway. If you are looking for production ready deployment of this codebase, please contact F1r3fly at f1r3fly.ceo \<at\> gmail \<dot\> com. F1r3fly takes no responsibility for material or financial loss under the terms of the Apache 2.0 license.
-
-## Installation
-
-### Docker (Recommended)
+macOS:
 
 ```bash
-# Pull the latest image
-docker pull f1r3flyindustries/f1r3fly-rust-node:latest
+curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+brew install protobuf openssl pkg-config lmdb just grpcurl
+```
 
-# Start a standalone node (for development)
+Ubuntu or Debian:
+
+```bash
+curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+sudo apt-get update
+sudo apt-get install -y protobuf-compiler libprotobuf-dev pkg-config libssl-dev liblmdb-dev build-essential gcc
+cargo install just
+```
+
+The workspace is pinned to `nightly-2026-02-09` in `rust-toolchain.toml`.
+
+### Git Hooks (Required)
+
+The pre-commit and pre-push hooks gate every commit and every push. **Install them before your first commit:**
+
+```bash
+cargo install cargo-deny --locked   # one-time, required by the pre-commit deny step
+./scripts/setup-hooks.sh            # points core.hooksPath at .githooks/
+```
+
+| Hook | When | Checks |
+| --- | --- | --- |
+| `pre-commit` | Every commit | `cargo fmt --check`, `cargo clippy -D warnings`, `cargo deny check` |
+| `pre-push` | Every push | `cargo clippy` (re-check), `cargo test --release` (per-crate) |
+
+Both hooks auto-skip in CI environments (the same gates run server-side in `.github/workflows/ci.yml`).
+
+**Mandatory for all contributors:**
+
+- All three pre-commit checks (fmt, clippy, deny) must pass.
+- The pre-push test suite must pass.
+- Do **not** use `git commit --no-verify` or `git push --no-verify`. The same checks run in CI; bypassing locally only defers the failure.
+- The `SKIP_FMT` / `SKIP_CLIPPY` / `SKIP_DENY` / `SKIP_TESTS` / `QUICK` / `TEST_CRATES` env-var skips are for local in-progress experimentation only — every commit and push that reaches the remote must pass without skips.
+
+See [DEVELOPER.md](DEVELOPER.md#git-hooks) for the full skip-flag reference and `setup-hooks.sh --status` / `--remove` management commands.
+
+### Build
+
+```bash
+cargo build
+cargo build --release
+```
+
+### Test
+
+```bash
+cargo test
+cargo test --release
+./scripts/run_rust_tests.sh
+```
+
+### Run A Local Standalone Node (without Docker)
+
+[`just`](https://github.com/casey/just) is a command runner included in the prerequisites above.
+
+```bash
+just run-standalone           # build + run standalone node
+just run-standalone-debug     # debug build (faster compile)
+just clean-standalone         # reset to genesis
+```
+
+The node listens on `localhost` ports 40400-40405. See [`run-local/README.md`](run-local/README.md) for configuration details and manual startup without `just`.
+
+### Run With Docker
+
+```bash
+# Standalone (single node, instant finalization)
 docker compose -f docker/standalone.yml up
 
-# Or start a multi-validator network (for testing consensus)
+# Multi-validator shard (bootstrap + 3 validators + observer + Prometheus + Grafana)
 docker compose -f docker/shard.yml up
 ```
 
-| Port | Service | Description |
-|------|---------|-------------|
-| 40400 | Protocol Server | Main blockchain protocol |
-| 40401 | gRPC External | External gRPC API |
-| 40402 | gRPC Internal | Internal gRPC API |
-| 40403 | HTTP API | REST/HTTP API endpoints |
-| 40404 | Peer Discovery | Node discovery service |
-| 40405 | Admin | Admin/metrics endpoint |
+See [`docker/README.md`](docker/README.md) for building local images, port map, validator setup, and monitoring.
 
-Data persists in named Docker volumes. Fresh start: `docker compose -f docker/standalone.yml down -v`
+#### Pull The Prebuilt Image
 
-Docker Compose loads `docker/.env` automatically — it contains node credentials and AI service configuration. See [docker/.env.example](docker/.env.example) for all available variables.
-
-See [docker/README.md](docker/README.md) for shard setup, validator bonding, and network configuration.
-
-### Source (Development)
-
-#### Manual Install
-
-Install the following build dependencies:
-
-**Rust toolchain:**
-```bash
-curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
-rustup default stable
-```
-
-**System packages:**
-
-Debian/Ubuntu:
-```bash
-sudo apt install autoconf cmake curl git libtool make protobuf-compiler unzip pkg-config libssl-dev
-```
-
-macOS (Homebrew):
-```bash
-brew install autoconf cmake git libtool make protobuf openssl pkg-config
-```
-
-**Optional tools:**
-- [`just`](https://github.com/casey/just) - Task runner for build commands
-- [`grpcurl`](https://github.com/fullstorydev/grpcurl) - gRPC CLI for testing
-
-#### Nix (Alternative)
-
-Nix provides a reproducible environment with all dependencies pinned. Install [Nix](https://nixos.org/download/) and [direnv](https://direnv.net/#basic-installation), then:
+CI publishes multi-arch images (`linux/amd64` and `linux/arm64`) to Oracle Container Registry (OCIR) on pushes to `master`, on release tags, and on a nightly schedule. The repository is public — **no Oracle Cloud account or `docker login` is required** to pull.
 
 ```bash
-direnv allow
+docker pull sjc.ocir.io/axd0qezqa9z3/f1r3fly-rust:latest
 ```
 
-If you encounter `error: experimental Nix feature 'nix-command' is disabled`:
-```bash
-mkdir -p ~/.config/nix
-echo "experimental-features = flakes nix-command" > ~/.config/nix/nix.conf
-direnv allow
-```
+Tag conventions:
 
-## Building
+| Tag | When it is published |
+| --- | --- |
+| `:latest` | Latest push to `master` |
+| `:VERSION` (e.g. `:v0.4.12`) | Release tag push |
+| `:nightly` / `:nightly-YYYYMMDD` | Nightly scheduled build |
 
-### Building Rust Node Docker Image
-
-```bash
-# Using helper script (recommended)
-./node/docker-commands.sh build-local
-
-# Direct Docker build
-docker build -f node/Dockerfile -t f1r3flyindustries/f1r3fly-rust-node:latest .
-
-# Multi-architecture (amd64 + arm64)
-docker buildx build --platform linux/amd64,linux/arm64 \
-  -f node/Dockerfile -t f1r3flyindustries/f1r3fly-rust-node:latest --push .
-```
-
-Image details: `rust:bookworm` builder, `debian:bookworm-slim` runtime, pure Rust binary. Tags: `f1r3fly-rust-node:local` (local build), `f1r3flyindustries/f1r3fly-rust-node:latest` (published).
-
-### Building from Source
+Use a pulled image with the compose files by overriding `F1R3FLY_IMAGE`:
 
 ```bash
-# Release build
-cargo build --release -p node
-
-# Debug build (faster compile)
-cargo build -p node
+F1R3FLY_IMAGE=sjc.ocir.io/axd0qezqa9z3/f1r3fly-rust:latest \
+    docker compose -f docker/standalone.yml up
 ```
 
-Or using `just`:
+To build a local image:
 
-```bash
-just build              # Release build
-just build-debug        # Debug build
-```
-
-## Running
-
-### Docker Network (Recommended)
-
-**Standalone** (single-validator, for development):
-```bash
-docker compose -f docker/standalone.yml up -d
-docker compose -f docker/standalone.yml logs -f
-docker compose -f docker/standalone.yml down
-```
-
-**Shard** (3 validators + bootstrap + observer):
-```bash
-docker compose -f docker/shard.yml up -d
-
-# Wait for genesis (~2-3 min), then check all nodes reached Running state
-docker compose -f docker/shard.yml logs 2>&1 | grep "Making a transition to Running state"
-
-docker compose -f docker/shard.yml logs -f         # Follow logs
-docker compose -f docker/shard.yml down             # Stop
-docker compose -f docker/shard.yml down -v          # Stop and wipe data
-```
-
-**Observer** (read-only, requires running shard):
-```bash
-docker compose -f docker/observer.yml up
-```
-
-**Monitoring** (Prometheus + Grafana + cAdvisor, requires running shard or standalone):
-```bash
-docker compose -f docker/shard-monitoring.yml up -d    # Start
-docker compose -f docker/shard-monitoring.yml down      # Stop
-```
-
-| Component | URL | Description |
-|---|---|---|
-| Prometheus | http://localhost:9090 | Metrics, targets, recording rules |
-| Grafana | http://localhost:3000 | Dashboards (admin/admin) |
-| cAdvisor | http://localhost:8080 | Container CPU/memory/IO metrics |
-
-See [docker/README.md](docker/README.md) for details.
-
-**Build and run local image:**
 ```bash
 ./node/docker-commands.sh build-local
-F1R3FLY_RUST_IMAGE=f1r3fly-rust-node:local docker compose -f docker/shard.yml up
 ```
 
-### Local Development
-
-Run the Rust node locally without Docker. Local runs do **not** load `docker/.env` — configuration comes from the HOCON config file (`run-local/conf/standalone.conf`). Environment variables for AI services must be set in your shell.
-
-```bash
-# Build and run standalone node
-just run-standalone
-
-# Or manually
-just setup-standalone
-just build
-./target/release/node run -s --config-file run-local/conf/standalone.conf
-```
-
-| Command | Description |
-|---------|-------------|
-| `just build` | Build node in release mode |
-| `just build-debug` | Build node in debug mode (faster compile) |
-| `just run-standalone` | Build and run standalone node |
-| `just run-standalone-debug` | Run in debug mode |
-| `just setup-standalone` | Set up data directory only |
-| `just clean-standalone` | Remove node data (fresh start) |
-| `just help` | Show node CLI help |
-
-Configuration: [`run-local/conf/standalone.conf`](run-local/conf/standalone.conf). See [`run-local/README.md`](run-local/README.md) for details.
-
-To enable AI services locally, set env vars before running:
-```bash
-OPENAI_ENABLED=true OPENAI_API_KEY=sk-... just run-standalone
-```
-
-## Usage
-
-### F1r3fly Rust Client
-
-CLI for interacting with F1r3fly nodes: deploy, propose, transfer, bond validators, check health.
-
-Repository: [F1R3FLY-io/rust-client](https://github.com/F1R3FLY-io/rust-client)
-
-```bash
-git clone https://github.com/F1R3FLY-io/rust-client.git
-cd rust-client
-cargo build --release
-
-# Deploy a Rholang contract
-cargo run -- deploy -f ./rho_examples/stdout.rho
-
-# Check network status
-cargo run -- status
-```
-
-### Rholang CLI
-
-Standalone CLI for executing and compiling Rholang programs (no running node required). See [rholang/README.md](rholang/README.md) for full documentation.
-
-```bash
-# Build
-cargo build --release --bin rholang-cli
-
-# Execute a Rholang program
-./target/release/rholang-cli examples/hello.rho
-
-# Compile to AST
-./target/release/rholang-cli --format ast examples/hello.rho
-```
-
-### F1r3drive
-
-FUSE-based file system backed by the F1r3fly blockchain.
-
-Repository: [F1R3FLY-io/f1r3drive](https://github.com/F1R3FLY-io/f1r3drive)
-
-### Smoke Test
-
-Verify the shard end-to-end using the [rust-client](https://github.com/F1R3FLY-io/rust-client) smoke test:
-
-```bash
-cd rust-client
-./scripts/smoke_test.sh localhost 40412 40413 40452
-```
-
-### F1r3flyFS
-
-Distributed file system built on F1r3fly: [F1r3flyFS Repository](https://github.com/F1R3FLY-io/f1r3flyfs#f1r3flyfs)
-
-## Multi-Service Orchestration
-
-For running F1r3fly alongside other ecosystem services (Embers, F1R3Sky, monitoring), see the [system-integration](https://github.com/F1R3FLY-io/system-integration) repository. It provides `shardctl` CLI, shared configs, integration tests, and Docker Compose orchestration.
-
-## AI Services
-
-F1r3fly nodes expose AI capabilities as Rholang system processes. These are available to smart contracts at runtime.
-
-| Rholang Process | Provider | Description |
-|---|---|---|
-| `rho:ai:gpt4` | OpenAI | GPT-4 text completion |
-| `rho:ai:dalle3` | OpenAI | DALL-E 3 image generation |
-| `rho:ai:textToAudio` | OpenAI | Text-to-speech audio |
-| `rho:ai:ollama:chat` | Ollama (local) | Chat completion via local Ollama |
-| `rho:ai:ollama:generate` | Ollama (local) | Text generation via local Ollama |
-| `rho:ai:ollama:models` | Ollama (local) | List available local models |
-
-AI services are disabled by default. Enable via environment variables (Docker) or HOCON config (local). The node reads these env vars:
-
-| Variable | Description |
-|---|---|
-| `RUST_LOG` | Log level filtering (e.g. `info`, `debug`, `info,f1r3fly.compute_parents_post_state.timing=debug`) |
-| `OPENAI_ENABLED` | Enable OpenAI AI services (`true`/`false`) |
-| `OPENAI_API_KEY` | OpenAI API key (required when `OPENAI_ENABLED=true`) |
-| `OLLAMA_ENABLED` | Enable local Ollama AI services (`true`/`false`) |
-| `OLLAMA_BASE_URL` | Ollama server URL (default: `http://localhost:11434`) |
-| `OLLAMA_MODEL` | Ollama model name (default: `llama3.2`) |
-| `OLLAMA_TIMEOUT_SEC` | Ollama request timeout in seconds (default: `120`) |
-
-All other node configuration is in HOCON config files. See [docker/.env.example](docker/.env.example) for Docker defaults and [defaults.conf](node/src/main/resources/defaults.conf) for HOCON config reference.
-
-When AI is disabled, contracts using `rho:ai:*` processes will fail at deploy time.
-
-## Configuration File
-
-- **Default location**: Data directory (`~/.rnode/`)
-- **Custom location**: `--config-file <path>`
-- **Format**: [HOCON](https://github.com/lightbend/config/blob/master/HOCON.md)
-
-The node ships with a built-in [defaults.conf](node/src/main/resources/defaults.conf) **embedded into the binary at compile time** (via `include_str!`) — the file is the source of the embed, not a runtime dependency. Operator config files are **minimal overrides** -- you only specify the values you want to change (typically ~40 lines for network, ports, and consensus tuning). HOCON's fallback semantics merge your overrides on top of the embedded defaults automatically.
-
-Reference configs:
-- [defaults.conf](node/src/main/resources/defaults.conf) - Built-in defaults with all available options
-- [docker/conf/standalone-dev.conf](docker/conf/standalone-dev.conf) - Minimal standalone override (~20 lines)
-- [docker/conf/default.conf](docker/conf/default.conf) - Minimal shard override
-- [Consensus Configuration Guide](https://github.com/F1R3FLY-io/system-integration/blob/main/docs/consensus-configuration.md) - FTT, synchrony threshold semantics, finalization formula, recommended values
-
-### Native Token
-
-Each chain's native token identity is configured before genesis and baked into the on-chain `TokenMetadata` contract. These values are **immutable after genesis**.
-
-| Config Field | CLI Flag | Default |
-|---|---|---|
-| `native-token-name` | `--native-token-name` | `F1R3CAP` |
-| `native-token-symbol` | `--native-token-symbol` | `F1R3` |
-| `native-token-decimals` | `--native-token-decimals` | `8` |
-
-After genesis, queryable via `/api/status` or on-chain at `rho:system:tokenMetadata`. Joiners verify their config matches the on-chain values at startup.
-
-## Documentation
-
-Detailed architecture and API documentation for each crate is available in [docs/](docs/README.md):
-
-| Module | Description |
-|--------|-------------|
-| [shared](docs/shared/) | Foundation types, KV store abstraction, LMDB bindings |
-| [crypto](docs/crypto/) | Hashing, signing, certificates |
-| [models](docs/models/) | Protobuf types, Rholang AST, sorted collections |
-| [rspace](docs/rspace/) | Tuple space engine, produce/consume matching, trie history |
-| [rholang](docs/rholang/) | Interpreter, reducer, cost accounting, system processes |
-| [casper](docs/casper/) | CBC Casper consensus, block creation/validation, finalization |
-| [block-storage](docs/block-storage/) | Block persistence, DAG storage, deploy index |
-| [comm](docs/comm/) | P2P networking, Kademlia DHT, TLS transport |
-| [node](docs/node/) | Binary entry point, gRPC/HTTP servers, CLI, diagnostics |
-| [graphz](docs/graphz/) | Graphviz DOT generation |
-
-**API & Events:**
-- [API Reference](docs/node/api-reference.md) — Complete HTTP REST + gRPC endpoint reference with parameters and curl examples
-- [WebSocket Events](docs/node/websocket-events.md) — Real-time event streaming, 10 event types, startup replay
-
-**Cross-cutting:** [Data Flows](docs/data-flows/) | [Patterns & Conventions](docs/patterns/)
-
-**Rholang Language:**
-- [Rholang Evaluator](rholang/README.md) — Language overview, CLI usage, known issues
-- [Rholang Tutorial](docs/rholang/rholangtut.md) — Language tutorial
-- [Pattern Matching](docs/rholang/rholangmatchingtut.md) — Pattern matching guide
-- [Reference Documentation](rholang/reference_doc/README.md) — Language reference by topic
-
-**Consensus:**
-- [Byzantine Fault Tolerance](docs/casper/BYZANTINE_FAULT_TOLERANCE.md) — BFT architecture, clique oracle, slashing
-- [Synchrony Constraint](docs/casper/SYNC_CONSTRAINT.md) — Synchrony constraint mechanism and configuration
-
-## Troubleshooting
-
-### Rust Build Issues
-
-```bash
-# Update toolchain
-rustup update stable
-
-# Clean and rebuild
-cargo clean
-cargo build --release -p node
-```
-
-### Docker Issues
-
-```bash
-docker context use default
-docker system prune -a
-```
-
-### Port Conflicts
-
-```bash
-lsof -i :40400-40404
-kill -9 <PID>
-```
-
-### Nix Issues
-
-```bash
-nix-garbage-collect
-direnv reload
-```
-
-## Support & Community
-
-- [F1r3fly Discord](https://discord.gg/NN59aFdAHM) - Tutorials, discussions, support
-- [GitHub Issues](https://github.com/F1R3FLY-io/f1r3fly/issues) - Bug reports and feature requests
-
-## Caveats and Filing Issues
-
-This F1r3fly repository is under active development. Report issues at [GitHub Issues](https://github.com/F1R3FLY-io/f1r3fly/issues/new).
-
-Include: F1r3fly version, OS, steps to reproduce, expected vs actual behavior, logs.
-
-## Legacy Scala/Hybrid Node
-
-<details>
-<summary>Scala node and hybrid node documentation (deprecated)</summary>
-
-The Scala node (`main` branch) and hybrid Scala+Rust node are deprecated in favor of the pure Rust node. For new deployments, use the Rust node on `rust/dev`.
-
-### Building Legacy Hybrid Node
-
-Requires [Nix development environment](#nix-alternative):
-
-```bash
-# Build hybrid Docker image
-docker context use default && sbt ";compile ;project node ;Docker/publishLocal ;project rchain"
-
-# Build fat JAR
-sbt ";compile ;project node ;assembly ;project rchain"
-```
-
-### Running Legacy Node
-
-```bash
-java -Djna.library.path=./rust_libraries/release \
-  --add-opens java.base/sun.security.util=ALL-UNNAMED \
-  --add-opens java.base/java.nio=ALL-UNNAMED \
-  --add-opens java.base/sun.nio.ch=ALL-UNNAMED \
-  -jar node/target/scala-2.12/rnode-assembly-1.0.0-SNAPSHOT.jar \
-  run -s --no-upnp --allow-private-addresses --synchrony-constraint-threshold=0.0
-```
-
-### System Packages (Legacy)
-
-<details>
-<summary>Debian/Ubuntu</summary>
-
-Requires `java17-runtime-headless`:
-
-```bash
-sudo apt update
-sudo apt install ./rnode_X.Y.Z_all.deb
-rnode run -s
-```
-
-</details>
-
-<details>
-<summary>RedHat/Fedora</summary>
-
-Requires `java-17-openjdk`:
-
-```bash
-sudo dnf install ./rnode-X.Y.Z-1.noarch.rpm
-rnode run -s
-```
-
-</details>
-
-### SBT Tips
-
-- Keep SBT running: use `sbt` shell for faster subsequent commands
-- Project-specific builds: `sbt "project node" compile`
-- Clean build: `sbt clean` then `rm -rf ~/.cache/coursier/`
-
-### Evaluating Rholang Contracts (Legacy)
-
-```bash
-sbt ";compile ;stage"
-./node/target/universal/stage/bin/rnode \
-  -Djna.library.path=./rust_libraries/release \
-  eval ./rholang/examples/tut-ai.rho
-```
-
-</details>
-
-## Acknowledgements
-
-We use [YourKit](https://www.yourkit.com/) to profile F1r3fly performance.
-
-## License Information
-
-F1r3fly is licensed under the **Apache License 2.0**.
+## Documentation Map
+
+| Path | Purpose |
+| --- | --- |
+| [DEVELOPER.md](DEVELOPER.md) | Native toolchain setup, build, test, and troubleshooting |
+| [CONTRIBUTING.md](CONTRIBUTING.md) | Contribution workflow and review expectations |
+| [docs/vps-cloud-testing.md](docs/vps-cloud-testing.md) | Testbed setup guide — local Docker, generic SSH VPSes, or Oracle Cloud |
+| [run-local/README.md](run-local/README.md) | Local standalone node workflow without Docker |
+| [docker/README.md](docker/README.md) | Docker image, standalone, shard, monitoring, smoke tests |
+| [node/README.md](node/README.md) | Node binary crate and CLI entry points |
+| [casper/README.md](casper/README.md) | Consensus engine overview |
+| [comm/README.md](comm/README.md) | P2P networking and discovery |
+| [crypto/README.md](crypto/README.md) | Keys, signatures, hashes, TLS helpers |
+| [models/README.md](models/README.md) | Protobuf model generation and schema helpers |
+| [rholang/README.md](rholang/README.md) | Rholang interpreter, CLI, examples |
+| [rspace++/README.md](rspace++/README.md) | Tuple space storage and replay support |
+| [block-storage/README.md](block-storage/README.md) | Block and deploy persistence |
+| [shared/README.md](shared/README.md) | Shared utilities and storage primitives |
+| [graphz/README.md](graphz/README.md) | DOT and graph helpers |
+| [scripts/README.md](scripts/README.md) | Helper scripts used from the repo root |
+| [examples/README.md](examples/README.md) | Top-level examples and how to run them |
+| [docs/rnode-api/README.md](docs/rnode-api/README.md) | API documentation source notes |
+
+## Default Ports
+
+| Port | Service |
+| --- | --- |
+| `40400` | Protocol server |
+| `40401` | External gRPC API |
+| `40402` | Internal gRPC API |
+| `40403` | HTTP API |
+| `40404` | Peer discovery |
+| `40405` | Admin HTTP API |
+
+## Development Notes
+
+- `.cargo/config.toml` sets `RUST_MIN_STACK=8388608` for deep Rholang recursion in tests.
+- `node`, `models`, and `comm` use `build.rs` to generate gRPC and protobuf bindings.
+- `rholang` and `rspace++` depend on the external `rholang-parser` crate fetched from Git.
+
+## Security Notice
+
+This codebase has not completed a production security audit. Do not deploy it for material value without review.
+
+## License
+
+Apache License 2.0. See [LICENSE.TXT](LICENSE.TXT).
